--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <script src="lib/p5.js"></script>
     <!-- Link to p5.sound.js library -->
     <script src="lib/p5.sound.js"></script>
-    <!-- Link to your sketch file -->
-    <script src="sketch.js" defer></script>
 </head>
 <body>
     <div id="sketch-container"></div>
     <!-- Mute/Unmute button -->
     <button id="muteButton" onclick="toggleMute()">Mute/Unmute Sound</button>
+
+    <!-- Load the sketch.js script at the end of the body -->
+    <script src="sketch.js" defer></script>
 </body>
 </html>
