--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <script src="lib/p5.sound.js"></script>
 </head>
 <body>
-    <div id="sketch-container"></div>
+    <div id="sketch-container">
+        <canvas id="defaultCanvas0" tabindex="0"></canvas>
+    </div>
     <!-- Mute/Unmute button -->
     <button id="muteButton" onclick="toggleMute()">Mute/Unmute Sound</button>
 
